Opened 11 years ago
Closed 10 years ago
#11182 closed bug (fixed)
pthread double free when run through libroot_debug.so
Reported by: | kallisti5 | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | pthread | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Our pthread implementation has a minor memory access bug somewhere.
To reproduce:
Download a simple pthread example: http://www.cs.ucsb.edu/~tyang/class/pthreads/code_sgi/p_hello.c Compile it: gcc p_hello.c Run it under libroot_debug.so: LD_PRELOAD=/system/lib/libroot_debug.so ./a.out 5
Attachments (1)
Change History (8)
by , 11 years ago
Attachment: | a.out-2085-debug-30-08-2014-23-50-49.report added |
---|
comment:1 by , 11 years ago
comment:2 by , 11 years ago
Summary: | Haiku pthread crash when run through libroot_debug.so → pthread double free when run through libroot_debug.so |
---|
comment:4 by , 10 years ago
Description: | modified (diff) |
---|
comment:5 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
comment:7 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Noticed when running mesa through libroot_debug.so. memory violation happens with any pthread application.