libroot.so: libc-lock.h: use a pthread mutex based impl.

* based on current glibc sysdeps/nptl/bits/libc-lock.h file.
* include missing headers which were previously included by libc-lock.h.
* This fixes #11182.